2003-09-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/auto-beam-engraver.cc (process_music): end/junk beam if
	special (repeat) bar comes along.

	* input/regression/auto-beam-bar.ly: update.

	* scripts/lilypond-book.py (output_dict): remove support for the
	EPS option.

	* scm/define-grobs.scm (all-grob-descriptions): add X-extent for
	VerticalAlignment and VerticalAxisGroup this fixes the size
	computations for the entire system.
 
	* input/les-nereides.ly (bass): remove superfluous fontSize.

	* scripts/lilypond-book.py (make_lilypond_file): \lilypondfile{}
	causes directory of file to be added to include path.

	* input/regression/beam-break.ly: test single stem beams.

	* input/regression/system-start-bracket.ly: fix.

	* lily/beam.cc (set_stem_lengths): single-stem-beam fix.

	* stepmake/stepmake/c-rules.make ($(outdir)/%.c): use -o for flex.

	* lily/beam-quanting.cc (quanting): check french-beaming per stem.
	(score_stem_lengths): do something sensible for single stem beams.

	* lily/beam.cc (least_squares): add kludge for single stem beams.

	* scripts/convert-ly.py (FatalConversionError.sub_alteration): add
	keySignature to list of broken things.

	* input/regression/keys.ly: fix.

	* VERSION (PACKAGE_NAME): release 1.9.7

	* Documentation/topdocs/NEWS.texi (Top): add quarter tones.

	* Documentation/user/refman.itely (Pitches): doc quarter tones.

	* lily/pitch.cc (LY_DEFINE): ly:pitch-quartertones: new function
	(quartertone_pitch): new function

	* mf/feta-toevallig.mf: add 3/4 sharp, 1/4 sharp, 1/4 flat, 3/4
	flat. WARNING: FONT CHANGED.

	* ly/nederlands.ly: add -eh and -ih for quarter tones.

	* lily/accidental-placement.cc (add_accidental): support for
	quarter tones.

	* ly/LANGUAGEs.ly: use symbols for alterations.

	* mf/feta-toevallig.mf: change accidental codes. 

	* scm/lily.scm (ly:get-option): switch on debugging only for
	--verbose.

	* lily/lily-guile.cc: remove ly:verbose?
