@@ -123,11 +123,10 @@ binary-arch: build install
 	dh_testdir
 	dh_testroot
 	cp -av lilypond-mode.el lilypond-font-lock.el lilypond-indent.el \
-		lilypond.words \
+		buildscripts/out/lilypond.words \
 		$(r)/usr/share/emacs/site-lisp/
 	dh_installdocs AUTHORS.txt NEWS.txt README.txt \
-		DEDICATION THANKS \
-		README.mandrake
+		DEDICATION THANKS 
 
 #	dh_installdocs DEDICATION NEWS ROADMAP *.txt \
 #		Documentation/pictures/out/*.png
